--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   ======================================================== -->
 </head>
   
-
+<script src="//code.tidio.co/c5jjgwcpdtmwjnb2gjlnbrsztwl2juob.js" async></script>
 <body>
 
   <!-- ======= Mobile nav toggle button ======= -->
